--- a/he.html
+++ b/he.html
@@ -2,99 +2,151 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>HE Wartung - Bosch</title>
+    <title>HE Wartung - Bosch V1.1</title>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+    
     <style>
-        :root { --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-green: #008a4f; --bosch-gray: #eff1f2; }
+        :root { 
+            --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-light-blue: #00b5e2; 
+            --bosch-green: #008a4f; --bosch-gray: #eff1f2;
+        }
+
         body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .bosch-logo { color: var(--bosch-red); font-weight: 900; font-size: 24px; }
-        .main-container { display: flex; flex: 1; overflow: hidden; }
-        .sidebar { width: 320px; background: white; border-right: 1px solid #ddd; overflow-y: auto; padding: 10px; }
-        .card { background: white; border: 1px solid #eee; border-left: 6px solid #ccc; margin-bottom: 10px; padding: 12px; border-radius: 4px; }
-        .content { flex: 1; padding: 20px; }
-        .nav-btn { padding: 6px 12px; cursor: pointer; border: 1px solid #ccc; background: white; border-radius: 3px; font-weight: bold; color: var(--bosch-blue); }
+
+        .top-bar { 
+            height: 45px; width: 100%; 
+            background: linear-gradient(90deg, #d50000 0%, #d50000 25%, #003a6c 25%, #003a6c 50%, #00b5e2 50%, #00b5e2 75%, #008a4f 75%, #008a4f 100%); 
+            display: flex; align-items: center; padding: 0 15px; box-sizing: border-box; 
+        }
+
+        .header { 
+            background: white; padding: 12px 25px; display: flex; justify-content: space-between; 
+            align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+        }
+
+        .bosch-brand { display: flex; align-items: baseline; gap: 8px; }
+        .bosch-text { color: #d50000; font-size: 30px; font-weight: 900; letter-spacing: -1.5px; font-family: 'Arial Black', sans-serif; line-height: 1; }
+        
+        .main-layout { display: flex; flex: 1; padding: 20px; gap: 20px; overflow: hidden; }
+        .content { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-blue); position: relative; }
+        .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-light-blue); overflow-y: auto; padding: 10px; }
+
+        .control-row { 
+            display: flex; align-items: center; padding: 10px; border-bottom: 1px solid #eee; 
+            border-left: 8px solid #ccc; margin-bottom: 5px; gap: 8px; 
+        }
+
+        .nav-btn { 
+            padding: 6px 12px; cursor: pointer; border: 1px solid #ccc; background: white; 
+            font-weight: bold; color: var(--bosch-blue); font-size: 13px; border-radius: 2px; 
+        }
+        .btn-wp { background: var(--bosch-red); color: white; border: none; font-size: 11px; }
+        .btn-close { background: var(--bosch-red); color: white; border: none; }
+
+        @keyframes pulse-red { 0% { opacity: 1; } 50% { opacity: 0.6; } 100% { opacity: 1; } }
+        .pulse { animation: pulse-red 1.5s infinite ease-in-out; }
     </style>
 </head>
-<body onmousedown="if(window.opener && window.opener.resetInactivityTimer) window.opener.resetInactivityTimer()" onkeydown="if(window.opener && window.opener.resetInactivityTimer) window.opener.resetInactivityTimer()">
-<header>
-    <div style="display:flex; align-items:center; gap:15px;">
-        <div class="bosch-logo">BOSCH</div>
-        <div style="font-weight:bold; color:#555;">HE Wartungsübersicht</div>
+<body onmousedown="if(window.opener && window.opener.resetInactivityTimer) window.opener.resetInactivityTimer()">
+
+    <div class="top-bar"><div style="color:white; font-weight:600;">Wartungsübersicht HE</div></div>
+
+    <div class="header">
+        <div class="bosch-brand"><span class="bosch-text">BOSCH</span><span style="color:#525f6b; font-weight:bold; margin-left:8px;">HE-V1.1</span></div>
+        <button class="nav-btn btn-close" onclick="window.close()">❌ Fenster schließen</button>
     </div>
-    <button class="nav-btn" onclick="window.close()">❌ Schließen</button>
-</header>
-<div class="main-container">
-    <div class="sidebar" id="machineList"></div>
-    <div class="content"><canvas id="mainChart"></canvas></div>
-</div>
-<script>
-    const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app" };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database(), auth = firebase.auth();
-    let state = { cloudRawData: [], extraCycles: {}, manualOffsets: {} };
 
-    async function writeLog(action, machine, detail) {
-        const user = auth.currentUser ? auth.currentUser.email : "Unbekannt";
-        await db.ref('auditLog').push({ timestamp: new Date().toISOString(), user, action, machine, detail });
-    }
+    <div class="main-layout">
+        <div class="content"><canvas id="mainChart"></canvas></div>
+        <div class="sidebar" id="machineList">Lade Daten...</div>
+    </div>
 
-    db.ref('maintenanceStateHE').on('value', s => {
-        const val = s.val() || {};
-        state.cloudRawData = val.cloudRawData || [];
-        state.extraCycles = val.extraCycles || {};
-        state.manualOffsets = val.manualOffsets || {};
-        updateUI();
-    });
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg",
+            authDomain: "bosch-agie-wartung.firebaseapp.com",
+            databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "bosch-agie-wartung"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.database(), auth = firebase.auth();
 
-    auth.onAuthStateChanged(user => { if(!user) window.close(); });
+        let state = { cloudRawData: [], extraCycles: {}, heOffsets: {} };
+        let chart = null;
 
-    function updateUI() {
-        if (!state.cloudRawData.length) return;
-        const data = state.cloudRawData.map(item => {
-            const id = item.STATIONNO;
-            const ist = (parseInt(item.Parts) || 0) + (state.manualOffsets[id] || 0);
-            const cIdx = state.extraCycles[id] || 0;
-            const target = 156000 * (cIdx + 1);
-            const rest = target - ist;
-            const pkg = (cIdx % 4 === 0) ? "P 6/7/12" : "Wartung";
-            const color = rest <= 0 ? "#8b0000" : (rest < 5000 ? "#d50000" : (rest < 15000 ? "#ffa500" : "#008a4f"));
-            return { id, ist, target, rest, color, pkg, cIdx };
-        }).sort((a,b) => a.rest - b.rest);
+        auth.onAuthStateChanged(user => { if(!user) window.close(); });
 
-        document.getElementById('machineList').innerHTML = data.map(d => `
-            <div class="card" style="border-left-color:${d.color}">
-                <div style="display:flex; justify-content:space-between; font-weight:bold;"><span>HE${d.id}</span><span style="color:${d.color}">${d.rest.toLocaleString()}</span></div>
-                <span style="font-size:0.8em; color:var(--bosch-red); font-weight:bold;">Paket: ${d.pkg}</span>
-                <div style="display:flex; align-items:center; gap:10px; margin-top:5px;">
-                    <button class="nav-btn" onclick="changeCycle('${d.id}', -1)">-</button>
-                    <b>${d.cIdx}</b>
-                    <button class="nav-btn" onclick="changeCycle('${d.id}', 1)">+</button>
-                </div>
-            </div>`).join('');
-        renderChart(data);
-    }
-
-    async function changeCycle(id, val) {
-        const current = state.extraCycles[id] || 0;
-        const newVal = Math.max(0, current + val);
-        await db.ref(`maintenanceStateHE/extraCycles/${id}`).set(newVal);
-        writeLog("Zyklus Änderung", "HE"+id, `Von ${current} auf ${newVal}`);
-    }
-
-    function renderChart(data) {
-        const ctx = document.getElementById('mainChart').getContext('2d');
-        if(window.myChart) window.myChart.destroy();
-        window.myChart = new Chart(ctx, {
-            type: 'bar', plugins: [ChartDataLabels],
-            data: { labels: data.map(d => "HE"+d.id), datasets: [{ data: data.map(d => d.rest), backgroundColor: data.map(d => d.color) }] },
-            options: { responsive: true, maintainAspectRatio: false, plugins: { legend: {display:false}, datalabels: {anchor:'end', align:'top', formatter:v=>v.toLocaleString()} } }
+        db.ref('maintenanceStateHE').on('value', snap => {
+            const val = snap.val() || {};
+            state.cloudRawData = val.cloudRawData || [];
+            state.extraCycles = val.extraCycles || {};
+            state.heOffsets = val.heOffsets || {};
+            updateUI();
         });
-    }
-</script>
+
+        function updateUI() {
+            const packages = ["P1/2", "P1/3", "P1/2", "P1/4", "P1/2/3", "P1/5", "P1/2", "P1/3", "P1/2", "P1/4", "P1/2/3", "P1/6/7", "P1/2"];
+            const data = state.cloudRawData.map(item => {
+                const id = item.StationNo;
+                const ist = (parseInt(item.Parts) || 0) - (state.heOffsets[id] || 0);
+                const cycles = state.extraCycles[id] || 0;
+                let rest = (16000 + (cycles * 16000)) - ist;
+                if (rest > 16000) rest = 16000;
+                let color = "#008a4f"; 
+                if (rest <= 0) color = "#8b0000"; 
+                else if (rest < 500) color = "#d50000"; 
+                else if (rest < 2000) color = "#ffa500";
+                return { id, rest, color, ist, cycles, pkg: packages[Math.min(cycles, packages.length - 1)] };
+            }).sort((a,b) => a.rest - b.rest);
+
+            document.getElementById('machineList').innerHTML = data.map(d => `
+                <div class="control-row ${d.rest <= 0 ? 'pulse' : ''}" style="border-left-color:${d.color}">
+                    <div style="flex:1.5"><b>HE-${d.id}</b><br><small>${d.pkg}</small></div>
+                    <div style="flex:1; text-align:right; font-weight:bold; font-size:16px;">${d.rest.toLocaleString()}</div>
+                    <button class="nav-btn btn-wp" onclick="wpReset('${d.id}')">WP</button>
+                    <button class="nav-btn" onclick="changeCycle('${d.id}', -1)">-</button>
+                    <div style="width:20px; text-align:center;">${d.cycles}</div>
+                    <button class="nav-btn" onclick="changeCycle('${d.id}', 1)">+</button>
+                </div>`).join('');
+            renderChart(data);
+        }
+
+        async function changeCycle(id, val) {
+            const current = state.extraCycles[id] || 0;
+            await db.ref(`maintenanceStateHE/extraCycles/${id}`).set(Math.max(0, current + val));
+        }
+
+        async function wpReset(id) {
+            if(confirm("Full Reset für HE-" + id + "?")) {
+                const newOffset = (state.heOffsets[id] || 0) + 208000;
+                await db.ref(`maintenanceStateHE/heOffsets/${id}`).set(newOffset);
+                await db.ref(`maintenanceStateHE/extraCycles/${id}`).set(0);
+            }
+        }
+
+        function renderChart(data) {
+            const ctx = document.getElementById('mainChart').getContext('2d');
+            if(chart) chart.destroy();
+            chart = new Chart(ctx, {
+                type: 'bar', plugins: [ChartDataLabels],
+                data: {
+                    labels: data.map(d => "HE-" + d.id),
+                    datasets: [{ data: data.map(d => d.rest), backgroundColor: data.map(d => d.color) }]
+                },
+                options: {
+                    responsive: true, maintainAspectRatio: false,
+                    scales: { y: { beginAtZero: true } },
+                    plugins: {
+                        legend: { display: false },
+                        datalabels: { anchor: 'end', align: 'top', rotation: -90, formatter: v => v.toLocaleString(), font: { weight: 'bold', size: 11 } }
+                    }
+                }
+            });
+        }
+    </script>
 </body>
 </html>
