--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="header">
     <div>
         <span style="color:var(--bosch-red);font-weight:900;font-size:24px;">BOSCH</span> 
-        <span style="font-weight:bold;color:#555;margin-left:10px;">Zentral-Dashboard</span>
+        <span style="font-weight:bold;color:#555;margin-left:10px;">Zentrales Wartungs Dashboard W430</span>
     </div>
     <div style="display:flex; gap:10px;">
         <button class="nav-btn" onclick="openHelpModal()">ℹ️ Hilfe</button>
