--- a/unotron.html
+++ b/unotron.html
@@ -8,16 +8,16 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <style>
-        :root { --bosch-red: #d50000; --bosch-green: #008a4f; --bosch-gray: #eff1f2; --bosch-blue: #003a6c; }
+        :root { --bosch-red: #d50000; --bosch-green: #008a4f; --bosch-gray: #eff1f2; --bosch-blue: #003a6c; --bosch-orange: #ffa500; --bosch-dark-red: #8b0000; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         .top-bar { height: 45px; width: 100%; background: linear-gradient(90deg, #008a4f 0%, #003a6c 50%, #d50000 100%); display: flex; align-items: center; padding: 0 15px; color: white; font-weight: bold; }
         .header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .main-layout { display: flex; flex: 1; padding: 20px; gap: 20px; overflow: hidden; }
-        .chart-area { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-green); }
-        .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-blue); overflow-y: auto; padding: 10px; }
+        .chart-area { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-green); border-radius: 4px; }
+        .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-blue); overflow-y: auto; padding: 10px; border-radius: 4px; }
         .row { display: flex; align-items: center; padding: 10px; border-bottom: 1px solid #eee; gap: 10px; border-left: 8px solid #ccc; margin-bottom: 5px; }
         .btn-wp { background: var(--bosch-red); color: white; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold; }
-        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; }
+        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; }
         @keyframes blink-red { 0% { background: #fff; } 50% { background: #ffcccc; } 100% { background: #fff; } }
         .blink { animation: blink-red 1s infinite; }
     </style>
@@ -51,11 +51,12 @@
                 const cyc = cycles[id] || 0;
                 const target = UNO_STEPS[cyc]?.total || (104000 + (cyc-18)*2000);
                 const rest = target - ist;
-                let color = "#008a4f";
-                // Proportionale Grenzen (2k Basis pro Schritt)
-                if(rest <= 0) color = "#8b0000";
-                else if(rest <= 60) color = "#d50000";
-                else if(rest <= 250) color = "#ffa500";
+                
+                let color = "#008a4f"; // Grün
+                if(rest <= 0) color = "#8b0000"; // Dunkelrot
+                else if(rest <= 60) color = "#d50000"; // Rot
+                else if(rest <= 250) color = "#ffa500"; // Gelb/Orange
+                
                 return { id, rest, color, cyc };
             }).sort((a,b) => a.rest - b.rest);
 
@@ -69,7 +70,7 @@
                     <div style="flex:1"><b>UNO-${d.id}</b></div>
                     <div style="flex:1; text-align:right;"><b>${d.rest.toLocaleString()}</b></div>
                     <button class="btn-cycle" onclick="changeC('${d.id}', -1)">-</button>
-                    <span>${d.cyc}</span>
+                    <span style="min-width: 20px; text-align: center;">${d.cyc}</span>
                     <button class="btn-cycle" onclick="changeC('${d.id}', 1)">+</button>
                 </div>`).join('');
         }
@@ -83,9 +84,35 @@
             const ctx = document.getElementById('mainChart').getContext('2d');
             if(chart) chart.destroy();
             chart = new Chart(ctx, {
-                type: 'bar', plugins: [ChartDataLabels],
-                data: { labels: data.map(d=>"UNO-"+d.id), datasets: [{ data: data.map(d=>d.rest), backgroundColor: data.map(d=>d.color) }] },
-                options: { responsive: true, maintainAspectRatio: false, scales: { y: { beginAtZero: true } }, plugins: { legend: { display: false }, datalabels: { anchor: 'end', align: 'top', rotation: -90, font: { weight: 'bold' } } } }
+                type: 'bar', 
+                plugins: [ChartDataLabels],
+                data: { 
+                    labels: data.map(d=>"UNO-"+d.id), 
+                    datasets: [{ 
+                        data: data.map(d=>d.rest), 
+                        backgroundColor: data.map(d=>d.color), // Hier werden die Farben zugewiesen
+                        borderColor: '#333',
+                        borderWidth: 1
+                    }] 
+                },
+                options: { 
+                    responsive: true, 
+                    maintainAspectRatio: false, 
+                    scales: { 
+                        y: { beginAtZero: true, title: { display: true, text: 'Reststückzahl' } } 
+                    }, 
+                    plugins: { 
+                        legend: { display: false }, 
+                        datalabels: { 
+                            anchor: 'end', 
+                            align: 'top', 
+                            rotation: -90, 
+                            offset: 10,
+                            font: { weight: 'bold' },
+                            formatter: (value) => value.toLocaleString()
+                        } 
+                    } 
+                }
             });
         }
     </script>
