--- a/unotron.html
+++ b/unotron.html
@@ -8,16 +8,16 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <style>
-        :root { --bosch-red: #d50000; --bosch-green: #008a4f; --bosch-gray: #eff1f2; --bosch-blue: #003a6c; --bosch-orange: #ffa500; --bosch-dark-red: #8b0000; }
+        :root { --bosch-red: #d50000; --bosch-green: #008a4f; --bosch-gray: #eff1f2; --bosch-blue: #003a6c; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         .top-bar { height: 45px; width: 100%; background: linear-gradient(90deg, #008a4f 0%, #003a6c 50%, #d50000 100%); display: flex; align-items: center; padding: 0 15px; color: white; font-weight: bold; }
         .header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .main-layout { display: flex; flex: 1; padding: 20px; gap: 20px; overflow: hidden; }
-        .chart-area { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-green); border-radius: 4px; }
-        .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-blue); overflow-y: auto; padding: 10px; border-radius: 4px; }
+        .chart-area { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-green); }
+        .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-blue); overflow-y: auto; padding: 10px; }
         .row { display: flex; align-items: center; padding: 10px; border-bottom: 1px solid #eee; gap: 10px; border-left: 8px solid #ccc; margin-bottom: 5px; }
         .btn-wp { background: var(--bosch-red); color: white; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold; }
-        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; }
+        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; }
         @keyframes blink-red { 0% { background: #fff; } 50% { background: #ffcccc; } 100% { background: #fff; } }
         .blink { animation: blink-red 1s infinite; }
     </style>
@@ -37,7 +37,7 @@
         const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app" };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
-        const UNO_STEPS = [{total:2000}, {total:4000}, {total:10000}, {total:14000}, {total:18000}, {total:26000}, {total:28000}, {total:30000}, {total:34000}, {total:42000}, {total:50000}, {total:56000}, {total:58000}, {total:66000}, {total:74000}, {total:82000}, {total:90000}, {total:98000}, {total:104000}];
+        const UNO_STEPS = [{total:2000, pkg:"P1, P2"}, {total:4000, pkg:"P3"}, {total:10000, pkg:"P1"}, {total:14000, pkg:"P5"}, {total:18000, pkg:"P1, P2"}, {total:26000, pkg:"P1"}, {total:28000, pkg:"P6, P7"}, {total:30000, pkg:"P3"}, {total:34000, pkg:"P1, P2"}, {total:42000, pkg:"P1"}, {total:50000, pkg:"P1, P2"}, {total:56000, pkg:"P3"}, {total:58000, pkg:"P1"}, {total:66000, pkg:"P1, P2"}, {total:74000, pkg:"P1"}, {total:82000, pkg:"P1, P2"}, {total:90000, pkg:"P3"}, {total:98000, pkg:"P1"}, {total:104000, pkg:"WP RESET"}];
         let chart = null;
 
         db.ref('maintenanceStateUnotron').on('value', snap => {
@@ -49,15 +49,13 @@
                 const id = item.STATIONNO;
                 const ist = parseInt(item["COUNT(*)"]) || 0;
                 const cyc = cycles[id] || 0;
-                const target = UNO_STEPS[cyc]?.total || (104000 + (cyc-18)*2000);
-                const rest = target - ist;
-                
-                let color = "#008a4f"; // Grün
-                if(rest <= 0) color = "#8b0000"; // Dunkelrot
-                else if(rest <= 60) color = "#d50000"; // Rot
-                else if(rest <= 250) color = "#ffa500"; // Gelb/Orange
-                
-                return { id, rest, color, cyc };
+                const step = UNO_STEPS[cyc] || { total: 104000 + (cyc-18)*2000, pkg: "Folge" };
+                const rest = step.total - ist;
+                let color = "#008a4f";
+                if(rest <= 0) color = "#8b0000";
+                else if(rest <= 60) color = "#d50000";
+                else if(rest <= 250) color = "#ffa500";
+                return { id, rest, ist, color, cyc, pkg: step.pkg };
             }).sort((a,b) => a.rest - b.rest);
 
             renderList(data);
@@ -70,7 +68,7 @@
                     <div style="flex:1"><b>UNO-${d.id}</b></div>
                     <div style="flex:1; text-align:right;"><b>${d.rest.toLocaleString()}</b></div>
                     <button class="btn-cycle" onclick="changeC('${d.id}', -1)">-</button>
-                    <span style="min-width: 20px; text-align: center;">${d.cyc}</span>
+                    <span>${d.cyc}</span>
                     <button class="btn-cycle" onclick="changeC('${d.id}', 1)">+</button>
                 </div>`).join('');
         }
@@ -84,33 +82,25 @@
             const ctx = document.getElementById('mainChart').getContext('2d');
             if(chart) chart.destroy();
             chart = new Chart(ctx, {
-                type: 'bar', 
-                plugins: [ChartDataLabels],
-                data: { 
-                    labels: data.map(d=>"UNO-"+d.id), 
-                    datasets: [{ 
-                        data: data.map(d=>d.rest), 
-                        backgroundColor: data.map(d=>d.color), // Hier werden die Farben zugewiesen
-                        borderColor: '#333',
-                        borderWidth: 1
-                    }] 
-                },
+                type: 'bar', plugins: [ChartDataLabels],
+                data: { labels: data.map(d=>"UNO-"+d.id), datasets: [{ data: data.map(d=>d.rest), backgroundColor: data.map(d=>d.color) }] },
                 options: { 
-                    responsive: true, 
-                    maintainAspectRatio: false, 
-                    scales: { 
-                        y: { beginAtZero: true, title: { display: true, text: 'Reststückzahl' } } 
-                    }, 
+                    responsive: true, maintainAspectRatio: false, 
                     plugins: { 
                         legend: { display: false }, 
-                        datalabels: { 
-                            anchor: 'end', 
-                            align: 'top', 
-                            rotation: -90, 
-                            offset: 10,
-                            font: { weight: 'bold' },
-                            formatter: (value) => value.toLocaleString()
-                        } 
+                        tooltip: {
+                            callbacks: {
+                                label: function(context) {
+                                    const d = data[context.dataIndex];
+                                    return [
+                                        `Offene Wartung: ${d.pkg}`,
+                                        `Gesamt Stückzahl: ${d.ist.toLocaleString()}`,
+                                        `Rest Stückzahl bis Wartung: ${d.rest.toLocaleString()}`
+                                    ];
+                                }
+                            }
+                        },
+                        datalabels: { anchor: 'end', align: 'top', rotation: -90, font: { weight: 'bold' } } 
                     } 
                 }
             });
