--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
         .card.critical { border-left-color: var(--bosch-red); }
         .card.overdue { border-left-color: var(--bosch-dark-red); }
 
-        /* NEU: Das blinkende Design für überfällige Wartungen */
-        @keyframes blink-red { 
-            0% { background: #fff; } 
-            50% { background: #ffcccc; } 
-            100% { background: #fff; } 
-        }
+        @keyframes blink-red { 0% { background: #fff; } 50% { background: #ffcccc; } 100% { background: #fff; } }
         .blink { animation: blink-red 1s infinite; }
         
         .card-info { display: flex; justify-content: space-between; align-items: flex-start; }
@@ -48,7 +43,7 @@
         .btn-primary { background: var(--bosch-blue); color: white; border: none; }
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.7); display: none; justify-content: center; align-items: center; z-index: 4000; }
         .modal-box { background: white; padding: 30px; border-top: 8px solid var(--bosch-red); width: 450px; text-align: left; border-radius: 4px; }
-        input { width: 100%; padding: 10px; margin: 5px 0; border: 1px solid #ccc; box-sizing: border-box; }
+        input, textarea { width: 100%; padding: 10px; margin: 5px 0; border: 1px solid #ccc; box-sizing: border-box; font-family: inherit; }
         #timeout-bar-container { position: absolute; bottom: 0; left: 0; width: 100%; height: 4px; background: #ddd; }
         #timeout-bar { height: 100%; width: 0%; background: var(--bosch-red); transition: width 1s linear; }
     </style>
@@ -98,6 +93,16 @@
         <button class="nav-btn btn-primary" style="width:100%;margin-top:10px;" onclick="handleAuthAction()">Bestätigen</button>
         <p id="toggleT" style="cursor:pointer;color:var(--bosch-blue);font-size:12px;" onclick="toggleM()">Konto erstellen?</p>
         <button class="nav-btn" style="width:100%" onclick="closeModals()">Abbrechen</button>
+    </div>
+</div>
+
+<div id="adminModal" class="modal">
+    <div class="modal-box">
+        <h3>Einsteller-Liste bearbeiten</h3>
+        <p style="font-size: 12px; color: #666;">Namen durch Komma trennen (z.B. Müller, Schmidt, Meyer):</p>
+        <textarea id="einstellerTextarea" rows="6"></textarea>
+        <button class="nav-btn btn-primary" style="width:100%; margin-top:10px;" onclick="saveEinstellerList()">Liste speichern</button>
+        <button class="nav-btn" style="width:100%; margin-top:5px;" onclick="closeModals()">Abbrechen</button>
     </div>
 </div>
 
@@ -259,13 +264,28 @@
 
     function openHelpModal() { document.getElementById('helpModal').style.display='flex'; }
     function openLoginModal() { if(auth.currentUser) auth.signOut(); else document.getElementById('loginModal').style.display='flex'; }
-    function closeModals() { document.getElementById('loginModal').style.display='none'; document.getElementById('helpModal').style.display='none'; }
+    function closeModals() { 
+        document.getElementById('loginModal').style.display='none'; 
+        document.getElementById('helpModal').style.display='none'; 
+        document.getElementById('adminModal').style.display='none'; 
+    }
     function toggleM() { isReg=!isReg; document.getElementById('regExtra').style.display=isReg?'block':'none'; }
+    
     function openAdminModal() {
         if(prompt("Admin PW:") === state.config.AdminPW) {
-            const nl = prompt("Einsteller:", (state.config.einstellerListe||[]).join(','));
-            if(nl) db.ref('config/einstellerListe').set(nl.split(',').map(s=>s.trim()));
+            document.getElementById('adminModal').style.display = 'flex';
+            document.getElementById('einstellerTextarea').value = (state.config.einstellerListe || []).join(', ');
+        } else {
+            alert("Code falsch!");
         }
+    }
+
+    async function saveEinstellerList() {
+        const text = document.getElementById('einstellerTextarea').value;
+        const newList = text.split(',').map(s => s.trim()).filter(s => s !== "");
+        await db.ref('config/einstellerListe').set(newList);
+        writeLog("Einsteller Liste geändert", "System", `Neue Liste gespeichert`);
+        closeModals();
     }
 </script>
 </body>
