--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         :root { 
             --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-light-blue: #00b5e2; 
             --bosch-green: #008a4f; --bosch-gray: #eff1f2; --bosch-dark-red: #8b0000;
+            --bosch-work-yellow: #fff3cd; /* Gelber Hintergrund für "In Arbeit" */
         }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; overflow: hidden; height: 100vh; display: flex; flex-direction: column; }
         
@@ -26,10 +27,17 @@
         .col-header a { text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px; font-size: 0.9em; cursor: pointer; }
         .machine-list { flex: 1; overflow-y: auto; padding: 10px; }
         
-        .card { padding: 12px; border-bottom: 1px solid #eee; border-left: 8px solid #ccc; margin-bottom: 8px; background: #fff; transition: background 0.3s; }
+        .card { padding: 12px; border-bottom: 1px solid #eee; border-left: 8px solid #ccc; margin-bottom: 8px; background: #fff; transition: background 0.3s; position: relative; }
         .card.warning { border-left-color: #ffa500; }
         .card.critical { border-left-color: var(--bosch-red); }
         .card.overdue { border-left-color: var(--bosch-dark-red); }
+
+        /* NEU: "In Arbeit" Style - stoppt das Blinken und färbt den Hintergrund */
+        .card.in-progress { 
+            background: var(--bosch-work-yellow) !important; 
+            animation: none !important; 
+            border-left-style: dashed; /* Optional: macht den Balken gestrichelt für "Status geändert" */
+        }
 
         @keyframes blink-red { 0% { background: #fff; } 50% { background: #ffcccc; } 100% { background: #fff; } }
         .blink { animation: blink-red 1s infinite; }
@@ -39,6 +47,9 @@
         .m-rest { font-weight: bold; font-size: 1.1em; }
         .m-paket { font-size: 0.85em; color: var(--bosch-red); font-weight: 600; margin-top: 2px; }
         select { width: 100%; padding: 5px; border: 1px solid #ccc; border-radius: 2px; margin-top: 8px; }
+        /* Markierung für den ausgewählten Einsteller im Dropdown */
+        select.active-user { border: 2px solid var(--bosch-blue); background: #f0f7ff; }
+
         .nav-btn { padding: 8px 15px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; color: var(--bosch-blue); border-radius: 2px; font-size: 13px; }
         .btn-primary { background: var(--bosch-blue); color: white; border: none; }
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.7); display: none; justify-content: center; align-items: center; z-index: 4000; }
@@ -111,7 +122,7 @@
         <h2 style="color:var(--bosch-blue); border-bottom: 2px solid var(--bosch-red); padding-bottom: 10px;">System-Anleitung</h2>
         <div style="font-size: 0.9em; line-height: 1.4;">
             <p><strong>1. Überwachung:</strong> Karten zeigen fällige Wartungen proportional zum Intervall.</p>
-            <p><strong>2. Sicherheit:</strong> Jede Änderung wird im Audit-Log gespeichert.</p>
+            <p><strong>2. In Arbeit:</strong> Sobald ein Einsteller gewählt ist, stoppt das Blinken und die Karte wird gelb.</p>
             <p><strong>3. Auto-Logout:</strong> Nach 70s Inaktivität wird der User ausgeloggt.</p>
             <hr>
             <strong>Systemverantwortlicher: Norman Schultheis</strong>
@@ -249,17 +260,24 @@
         }).filter(m => m.rest < warnLimit).sort((a,b) => a.rest - b.rest);
 
         document.getElementById(cId).innerText = data.length;
-        document.getElementById(id).innerHTML = data.map(m => `
-            <div class="card ${m.rest<=0 ? 'overdue blink' : (m.rest<critLimit?'critical':'warning')}">
+        document.getElementById(id).innerHTML = data.map(m => {
+            const assigned = state.assignments[m.key] || "";
+            const isWorking = assigned !== "";
+            const blinkClass = (m.rest <= 0 && !isWorking) ? 'blink overdue' : (m.rest <= 0 ? 'overdue' : (m.rest < critLimit ? 'critical' : 'warning'));
+            const workingClass = isWorking ? 'in-progress' : '';
+
+            return `
+            <div class="card ${blinkClass} ${workingClass}">
                 <div class="card-info">
                     <div><div class="m-id">${m.id}</div><div class="m-paket">${m.pkg}</div></div>
                     <div class="m-rest">${m.rest.toLocaleString()}</div>
                 </div>
-                <select ${!auth.currentUser?'disabled':''} onchange="safeSave('${m.key}', this.value)">
-                    <option value="">-- Einsteller --</option>
-                    ${(state.config.einstellerListe||[]).map(e => `<option value="${e}" ${state.assignments[m.key]===e?'selected':''}>${e}</option>`).join('')}
+                <select class="${isWorking ? 'active-user' : ''}" ${!auth.currentUser?'disabled':''} onchange="safeSave('${m.key}', this.value)">
+                    <option value="">-- Einsteller wählen --</option>
+                    ${(state.config.einstellerListe||[]).map(e => `<option value="${e}" ${assigned===e?'selected':''}>${e}</option>`).join('')}
                 </select>
-            </div>`).join('');
+            </div>`;
+        }).join('');
     }
 
     function openHelpModal() { document.getElementById('helpModal').style.display='flex'; }
